fix: layout error due to wrong size of `img.badge`'s height when using phone browser

--- a/_sass/gold_efficiency/img.scss
+++ b/_sass/gold_efficiency/img.scss
@@ -20,6 +20,6 @@ img.stat-icon {
   
   @media screen and (max-width: 480px) {
     img.badge {
-      height: 18px;
+      height: 16px;
     }
   }
